apps/navidrome/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: navidrome
  namespace: navidrome
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: navidrome
  template:
    metadata:
      labels:
        app: navidrome
    spec:
      containers:
        - name: navidrome
          image: deluan/navidrome:0.63.2
          ports:
            - name: http
              containerPort: 4533
          readinessProbe:
            tcpSocket:
              port: 4533
            initialDelaySeconds: 20
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 4533
            initialDelaySeconds: 60
            periodSeconds: 20
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 1
              memory: 1Gi
          volumeMounts:
            - name: music
              mountPath: /music
            - name: data
              mountPath: /data
      volumes:
        - name: music
          persistentVolumeClaim:
            claimName: navidrome-music
        - name: data
          persistentVolumeClaim:
            claimName: navidrome-data
